-- reconsidered use of CommonMark and created BrothMark spec, which is simpler to parse and more intuitive. -- Created a very basic incomplete highlighter for BrothMark -- gave up after hitting a wall with TSynEdit attributes when combining styles.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ source/stewtest.lps
 source/stewtest.lpi
 test-data/story-working/
 source/nms-laz-utils/backup
+source/commonmark-utils/backup
+test-data/backup
+source/brothmark-utils/backup
